--- a/GitHubExtension/View/IssueListControl.xaml
+++ b/GitHubExtension/View/IssueListControl.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl x:Name="IssueList" x:Class="Alteridem.GitHub.Extension.View.IssueListControl"
+﻿<UserControl x:Name="IssueList"
+             x:Class="Alteridem.GitHub.Extension.View.IssueListControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -106,10 +107,11 @@
                   Margin="6,0,6,6"
                   AutoGenerateColumns="False" 
                   ItemsSource="{Binding Path=Issues}"
+                  SelectedItem="{Binding Path=Issue}"
                   FontSize="12"
                   IsReadOnly="True"
                   RowHeaderWidth="0" 
-                  MouseDoubleClick="OnOpenIssue"
+                  MouseDoubleClick="OnOpenIssueViewer"
                   Background="{DynamicResource {x:Static wpf:Theme.BackgroundKey}}"
                   Foreground="{DynamicResource {x:Static wpf:Theme.ForegroundKey}}"
                   RowBackground="{DynamicResource {x:Static wpf:Theme.BackgroundKey}}"
