--- a/GitHubExtension/View/IssueListControl.xaml
+++ b/GitHubExtension/View/IssueListControl.xaml
@@ -40,23 +40,7 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="MilestoneTemplate">
-            <Grid HorizontalAlignment="Stretch">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
-                <Border 
-                    Grid.Column="1" 
-                    HorizontalAlignment="Right" 
-                    VerticalAlignment="Center"
-                    Background="{DynamicResource {x:Static wpf:Theme.BackgroundAccentKey}}"
-                    BorderBrush="{DynamicResource {x:Static wpf:Theme.ControlBorderKey}}"
-                    CornerRadius="2" 
-                    BorderThickness="1" >
-                    <TextBlock Text="{Binding Path=OpenIssues}" Margin="2" FontSize="10" />
-                </Border>
-            </Grid>
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
         </DataTemplate>
         <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="IssueFilterDataProvider">
             <ObjectDataProvider.MethodParameters>
